--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -52,6 +52,7 @@ Variables
   --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
   --max-width: 1170px;
 }
+
 /*
 =============== 
 Global Styles
@@ -65,6 +66,7 @@ Global Styles
   padding: 0;
   box-sizing: border-box;
 }
+
 body {
   font-family: var(--ff-secondary);
   background: var(--clr-white);
@@ -72,12 +74,15 @@ body {
   line-height: 1.5;
   font-size: 0.875rem;
 }
+
 ul {
   list-style-type: none;
 }
+
 a {
   text-decoration: none;
 }
+
 img:not(.nav-logo) {
   width: 100%;
   display: block;
@@ -93,38 +98,49 @@ h4 {
   margin-bottom: 0.75rem;
   font-family: var(--ff-primary);
 }
+
 h1 {
   font-size: 3rem;
 }
+
 h2 {
   font-size: 2rem;
 }
+
 h3 {
   font-size: 1.25rem;
 }
+
 h4 {
   font-size: 0.875rem;
 }
+
 p {
   margin-bottom: 1.25rem;
   color: var(--clr-grey-5);
 }
+
 @media screen and (min-width: 800px) {
   h1 {
     font-size: 4rem;
   }
+
   h2 {
-    font-size: 2.5rem;
+    font-size: 2rem;
   }
+
   h3 {
     font-size: 1.75rem;
   }
+
   h4 {
     font-size: 1rem;
   }
+
   body {
     font-size: 1rem;
   }
+
   h1,
   h2,
   h3,
@@ -132,6 +148,7 @@ p {
     line-height: 1;
   }
 }
+
 /*  global classes */
 
 .btn {
@@ -152,13 +169,15 @@ p {
   display: inline-flex;
   align-items: center;
 }
+
 .btn:hover {
   color: var(--clr-primary-1);
   background: var(--clr-primary-7);
 }
+
 /* section */
 .section {
-  padding: 5rem 0;
+  padding: 3rem 0;
 }
 
 .section-center {
@@ -166,11 +185,13 @@ p {
   margin: 0 auto;
   max-width: 1170px;
 }
+
 @media screen and (min-width: 992px) {
   .section-center {
     width: 95vw;
   }
 }
+
 /* added during recording */
 .underline {
   width: 5rem;
@@ -180,13 +201,21 @@ p {
   margin-left: auto;
   margin-right: auto;
 }
+
 .section-title {
-  margin-bottom: 4rem;
+  margin-bottom: 2rem;
   text-align: center;
 }
+.section-title h2{
+  text-transform: uppercase;
+  font-weight: 900;
+
+}
+
 .bg-grey {
   background: var(--clr-grey-10);
 }
+
 /*
 =============== 
 Navbar
@@ -195,6 +224,7 @@ Navbar
 .nav-links {
   display: none;
 }
+
 .nav {
   height: 5rem;
   padding: 1rem;
@@ -203,33 +233,40 @@ Navbar
   align-items: center;
   -webkit-transition: var(--transition);
   transition: var(--transition);
+  background: var(--clr-primary-2);
 }
+
 .nav-center {
   width: 100%;
   max-width: 1170px;
   margin: 0 auto;
 }
+
 .nav-header {
   display: grid;
   grid-template-columns: auto 1fr;
   -webkit-box-align: center;
   align-items: center;
 }
+
 .nav-btn {
   background: transparent;
   border-color: transparent;
-  color: var(--clr-primary-5);
+  color: var(--clr-white);
   font-size: 2rem;
   cursor: pointer;
   justify-self: end;
 }
+
 @media screen and (min-width: 768px) {
   .nav {
-    background: var(--clr-primary-10);
+    background: var(--clr-primary-2);
   }
+
   .nav-btn {
     display: none;
   }
+
   .nav-links {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -239,17 +276,20 @@ Navbar
     column-gap: 2rem;
     justify-self: end;
   }
+
   .nav-links a {
     text-transform: capitalize;
-    color: var(--clr-grey-1);
+    color: var(--clr-white);
     font-weight: bold;
     letter-spacing: var(--spacing);
     -webkit-transition: var(--transition);
     transition: var(--transition);
   }
+
   .nav-links a:hover {
-    color: var(--clr-primary-5);
+    color: var(--clr-grey-5);
   }
+
   .nav-center {
     display: grid;
     grid-template-columns: auto 1fr;
@@ -257,16 +297,18 @@ Navbar
     align-items: center;
   }
 }
+
 /* fixed navbar */
 .navbar-fixed {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  background: var(--clr-white);
   z-index: 2;
   box-shadow: var(--light-shadow);
+  background: var(--clr-primary-2);
 }
+
 /*
 =============== 
 Sidebar
@@ -290,14 +332,17 @@ Sidebar
   -webkit-transform: translateX(-100%);
   transform: translateX(-100%);
 }
+
 /* toggle sidebar */
 .show-sidebar {
   -webkit-transform: translateX(0);
   transform: translateX(0);
 }
+
 .sidebar-links {
   text-align: center;
 }
+
 .sidebar-links a {
   font-size: 2rem;
   text-transform: capitalize;
@@ -308,9 +353,11 @@ Sidebar
   display: inline-block;
   margin-bottom: 1.5rem;
 }
+
 .sidebar-links a:hover {
   color: var(--clr-primary-5);
 }
+
 .social-icons {
   display: grid;
   margin-top: 3rem;
@@ -318,15 +365,18 @@ Sidebar
   grid-template-columns: repeat(5, 1fr);
   justify-items: center;
 }
+
 .social-icon {
   font-size: 1.5rem;
   color: var(--clr-grey-1);
   -webkit-transition: var(--transition);
   transition: var(--transition);
 }
+
 .social-icon:hover {
   color: var(--clr-primary-5);
 }
+
 .close-btn {
   position: absolute;
   top: 1rem;
@@ -339,9 +389,11 @@ Sidebar
   color: #bb2525;
   cursor: pointer;
 }
+
 .close-btn:hover {
   color: #e66b6b;
 }
+
 /*
 =============== 
 Hero
@@ -352,31 +404,41 @@ Hero
   margin-bottom: 0.5rem;
   margin-left: 0;
 }
+
 .hero-img {
   display: none;
 }
+
 .hero {
-  background: var(--clr-primary-10);
+  background: linear-gradient(rgb(44, 174, 186, 0.7), rgba(0, 0, 0, 0.7)),
+    url("/project-1.jpeg") center/cover no-repeat;
 }
+
 .hero-center {
   min-height: calc(100vh - 5rem);
   display: grid;
   place-items: center;
 }
-.hero-info h4 {
-  color: var(--clr-grey-5);
+
+.hero-info h4,
+.hero-info h1 {
+  color: var(--clr-white);
 }
+
 .hero-icons {
   justify-items: start;
 }
+
 .hero-btn {
   margin-top: 1.25rem;
 }
+
 @media screen and (min-width: 992px) {
   .hero-img {
     display: block;
     position: relative;
   }
+
   .hero-center {
     grid-template-columns: 1fr 1fr;
   }
@@ -393,6 +455,7 @@ Hero
     border-radius: var(--radius);
   }
 }
+
 .hero-photo {
   max-width: 25rem;
   max-height: 30rem;
@@ -401,6 +464,7 @@ Hero
   border-radius: var(--radius);
   position: relative;
 }
+
 /*
 =============== 
 About
@@ -409,35 +473,44 @@ About
 /* section title added to globals */
 .about-title {
   text-align: left;
-  margin-bottom: 2rem;
+  margin-bottom: 0.8rem;
 }
-.about-title h2{
-  font-size: 1.5rem;
+
+.about-title h2 {
+  font-size: 1rem;
 }
+
 .about-title .underline {
   margin-left: 0;
 }
+
 .about-center {
   display: grid;
   gap: 3rem 2rem;
 }
+
 .about-img {
   justify-self: center;
 }
+
 @media screen and (min-width: 992px) {
   .about-center {
     grid-template-columns: 1fr 1fr;
   }
+
   .about-img {
     position: relative;
   }
+
   .about-img::before {
     left: -2rem;
   }
+
   .about-info {
     align-self: center;
   }
 }
+
 /*
 =============== 
 Services
@@ -453,30 +526,37 @@ Services
   -webkit-transition: var(--transition);
   transition: var(--transition);
 }
+
 .service-icon {
   font-size: 2rem;
   margin-bottom: 1.5rem;
 }
+
 .service .underline {
   width: 3rem;
   height: 0.12rem;
   -webkit-transition: var(--transition);
   transition: var(--transition);
 }
+
 .service p {
   -webkit-transition: var(--transition);
   transition: var(--transition);
 }
+
 .service:hover {
   background: var(--clr-primary-5);
   color: var(--clr-white);
 }
+
 .service:hover p {
   color: var(--clr-white);
 }
+
 .service:hover .underline {
   background: var(--clr-white);
 }
+
 @media screen and (min-width: 676px) {
   .services-center {
     display: grid;
@@ -486,11 +566,13 @@ Services
     column-gap: 2rem;
   }
 }
+
 @media screen and (min-width: 992px) {
   .services-center {
     grid-template-columns: 1fr 1fr 1fr;
   }
 }
+
 /* talk about small screen 
 without grid different setup */
 /*
@@ -503,12 +585,14 @@ Projects
   max-width: 30rem;
   margin: 0 auto;
 }
+
 .project {
   position: relative;
   background: var(--clr-primary-5);
   border-radius: var(--radius);
   margin-bottom: 2rem;
 }
+
 .project-info {
   text-align: center;
   color: var(--clr-white);
@@ -521,13 +605,16 @@ Projects
   transition: var(--transition);
   opacity: 0;
 }
+
 .project-info p {
   text-transform: capitalize;
   color: var(--clr-white);
 }
+
 .project:hover .project-info {
   opacity: 1;
 }
+
 .project-img {
   -webkit-transition: var(--transition);
   transition: var(--transition);
@@ -536,9 +623,11 @@ Projects
   -o-object-fit: cover;
   object-fit: cover;
 }
+
 .project:hover .project-img {
   opacity: 0.1;
 }
+
 .project::after {
   content: "";
   position: absolute;
@@ -552,11 +641,16 @@ Projects
   transition: var(--transition);
   opacity: 0;
 }
+
 .project:hover::after {
   opacity: 1;
   -webkit-transform: scale(0.8);
   transform: scale(0.8);
 }
+.projects-center{
+  width: 100vw;
+}
+
 @media screen and (min-width: 676px) {
   .projects-center {
     display: grid;
@@ -566,11 +660,13 @@ Projects
     column-gap: 2rem;
   }
 }
+
 @media screen and (min-width: 992px) {
   .projects-center {
     grid-template-columns: repeat(3, 1fr);
   }
 }
+
 @media screen and (min-width: 1170px) {
   .projects-center {
     grid-template-rows: 200px 200px;
@@ -579,25 +675,32 @@ Projects
       "a b b"
       "a c d";
   }
+
   .project-img {
     height: 100%;
   }
+
   .project {
     height: 100%;
   }
+
   .project-1 {
     grid-area: a;
   }
+
   .project-2 {
     grid-area: b;
   }
+
   .project-3 {
     grid-area: c;
   }
+
   .project-4 {
     grid-area: d;
   }
 }
+
 /*
 =============== 
 Connect
@@ -609,6 +712,7 @@ Connect
   padding: 10rem 0 5rem 0;
   margin: 5rem 0;
 }
+
 .video-container {
   position: absolute;
   top: 0;
@@ -619,6 +723,7 @@ Connect
   object-fit: cover;
   z-index: -2;
 }
+
 .connect::after {
   content: "";
   position: absolute;
@@ -631,51 +736,51 @@ Connect
   opacity: 0.7;
   z-index: -1;
 }
+
 .connect {
   display: grid;
   place-items: center;
 }
+
 .video-banner .section-title {
   margin-bottom: 2rem;
 }
+
 .video-text {
   max-width: 30rem;
 }
+
 .video-banner {
   background: var(--clr-primary-10);
   padding: 3rem 5rem 12rem 5rem;
   text-align: center;
 
-  -webkit-clip-path: polygon(
-    0% 0%,
-    100% 0%,
-    100% 75%,
-    75% 75%,
-    75% 100%,
-    50% 75%,
-    0% 75%
-  );
-  clip-path: polygon(
-    0% 0%,
-    100% 0%,
-    100% 75%,
-    75% 75%,
-    75% 100%,
-    50% 75%,
-    0% 75%
-  );
+  -webkit-clip-path: polygon(0% 0%,
+      100% 0%,
+      100% 75%,
+      75% 75%,
+      75% 100%,
+      50% 75%,
+      0% 75%);
+  clip-path: polygon(0% 0%,
+      100% 0%,
+      100% 75%,
+      75% 75%,
+      75% 100%,
+      50% 75%,
+      0% 75%);
 }
+
 .connect {
-  -webkit-clip-path: polygon(
-    50% 0%,
-    100% 10%,
-    100% 90%,
-    50% 100%,
-    0 90%,
-    0 10%
-  );
+  -webkit-clip-path: polygon(50% 0%,
+      100% 10%,
+      100% 90%,
+      50% 100%,
+      0 90%,
+      0 10%);
   clip-path: polygon(50% 0%, 100% 10%, 100% 90%, 50% 100%, 0 90%, 0 10%);
 }
+
 /*
 =============== 
 Skills
@@ -690,21 +795,26 @@ Skills
     column-gap: 2rem;
   }
 }
+
 .skills {
   background: var(--clr-primary-9);
 }
+
 .skills h3 {
   margin: 1.5rem 0;
   color: var(--clr-primary-1);
 }
+
 .skill {
   margin-bottom: 1.25rem;
 }
+
 .skill p {
   margin-bottom: 0.5rem;
   text-transform: capitalize;
   color: var(--clr-primary-1);
 }
+
 .skill-container {
   background: var(--clr-white);
   height: 1rem;
@@ -712,6 +822,7 @@ Skills
   border-radius: var(--radius);
   position: relative;
 }
+
 .skill-value {
   position: absolute;
   top: 0;
@@ -721,12 +832,15 @@ Skills
   width: 50%;
   border-radius: var(--radius);
 }
+
 .value-70 {
   width: 70%;
 }
+
 .value-80 {
   width: 80%;
 }
+
 .skill-text {
   position: absolute;
   top: -2rem;
@@ -734,12 +848,15 @@ Skills
   -webkit-transform: translateX(-50%);
   transform: translateX(-50%);
 }
+
 .skill-text-70 {
   left: 70%;
 }
+
 .skill-text-80 {
   left: 80%;
 }
+
 /*
 =============== 
 Timeline
@@ -749,15 +866,18 @@ Timeline
   width: 80vw;
   max-width: 40rem;
 }
+
 .timeline-item {
   border-top: 2px dashed var(--clr-primary-5);
   margin: 0;
   padding: 4rem 2rem;
   position: relative;
 }
+
 .timeline p {
   margin-bottom: 0;
 }
+
 .timeline-item:nth-child(even) {
   border-left: 2px dashed var(--clr-primary-5);
   border-top-left-radius: 2rem;
@@ -766,6 +886,7 @@ Timeline
   margin-right: 2rem;
   padding-right: 0;
 }
+
 .timeline-item:nth-child(odd) {
   border-right: 2px dashed var(--clr-primary-5);
   border-top-right-radius: 2rem;
@@ -773,13 +894,16 @@ Timeline
   margin-left: 2rem;
   padding-left: 0;
 }
+
 .timeline-item:first-child {
   border-top: 0;
   border-top-right-radius: 0;
 }
+
 .timeline-item:last-child {
   border-bottom-left-radius: 0;
 }
+
 .number {
   position: absolute;
   top: 50%;
@@ -795,14 +919,17 @@ Timeline
   color: var(--clr-primary-1);
   font-weight: bold;
 }
+
 .timeline-item:nth-child(even) .number {
   left: 0;
 }
+
 .timeline-item:nth-child(odd) .number {
   right: 0;
   -webkit-transform: translate(50%, -50%);
   transform: translate(50%, -50%);
 }
+
 /*
 =============== 
 Blog
@@ -811,13 +938,15 @@ Blog
 .blog {
   background: var(--clr-grey-10);
 }
+
 .card {
-  height: 27rem;
+  height: 20rem;
   position: relative;
   /* talk later */
   -webkit-perspective: 1500px;
   perspective: 1500px;
 }
+
 .card-side {
   -webkit-transition: all 2s linear;
   transition: all 2s linear;
@@ -832,9 +961,11 @@ Blog
   -webkit-transform: translate3d(0, 0, 0);
   visibility: visible;
 }
+
 .card-front {
   background: var(--clr-white);
 }
+
 .card-back {
   background: var(--clr-primary-10);
   -webkit-transform: rotateY(180deg);
@@ -842,31 +973,37 @@ Blog
   display: grid;
   place-items: center;
 }
+
 .card:hover .card-front {
   -webkit-transform: rotateY(-180deg);
   transform: rotateY(-180deg);
 }
+
 .card:hover .card-back {
   -webkit-transform: rotateY(0);
   transform: rotateY(0);
 }
+
 /* rest of the styles */
 .card-info {
   padding: 1rem 1.5rem;
 }
+
 .card-front img {
-  height: 13rem;
+  height: 10rem;
   -o-object-fit: cover;
   object-fit: cover;
   border-top-left-radius: var(--radius);
   border-top-right-radius: var(--radius);
 }
+
 .card-footer {
   display: grid;
   grid-template-columns: auto 1fr;
   -webkit-box-align: center;
   align-items: center;
 }
+
 .card-footer img {
   width: 2rem;
   height: 2rem;
@@ -874,6 +1011,7 @@ Blog
   object-fit: cover;
   border-radius: 50%;
 }
+
 .card-footer p {
   margin-bottom: 0;
   text-transform: uppercase;
@@ -881,11 +1019,51 @@ Blog
   color: var(--clr-primary-5);
   font-size: 0.85rem;
 }
+
 .blog-center {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(330px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 3rem 1rem;
 }
+
+
+/* 
+=============== 
+Blog
+=============== 
+*/
+.news {
+  background: var(--clr-grey-10);
+}
+.news-center{
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(21rem, 1fr));
+  gap: 1rem .2rem;
+  justify-items: center;
+}
+/* .team-photo{
+  height: 40%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* overflow: hidden; */
+/* } */
+.team-photo img{
+  height: 8rem;
+  width: 8rem;
+  border-radius: 50%;
+  -o-object-fit: cover;
+  object-fit: center;
+} */
+
+.team-card-body{
+  background-color: black;
+}
+.bg-card-team{
+  background: var(--clr-primary-2);
+}
+
+
 /*
 =============== 
 Footer
@@ -897,19 +1075,24 @@ Footer
   display: grid;
   place-items: center;
 }
+
 .footer .social-icons {
   margin-bottom: 2rem;
 }
+
 .footer .social-icon {
   color: var(--clr-primary-5);
 }
+
 .footer .social-icon:hover {
   color: var(--clr-primary-10);
 }
+
 .footer p {
   font-size: 1.25rem;
   text-transform: capitalize;
 }
+
 /*
 =============== 
 Single Page
@@ -919,15 +1102,18 @@ Single Page
   background: var(--clr-primary-10);
   min-height: calc(100vh - 5rem - 198px);
 }
+
 .page-info {
   max-width: 700px;
 }
+
 .page-info a {
   text-transform: uppercase;
   color: var(--clr-primary-5);
   -webkit-transition: var(--transition);
   transition: var(--transition);
 }
+
 .page-info a:hover {
   color: var(--clr-primary-1);
 }
@@ -943,20 +1129,25 @@ Products Page
   display: grid;
   place-items: center;
 }
+
 .projects-hero .section-title {
   margin-bottom: 0;
 }
+
 .single-project {
   background: var(--clr-grey-10);
   border-radius: var(--radius);
 }
+
 .project-container img {
   border-top-left-radius: var(--radius);
   border-top-right-radius: var(--radius);
 }
+
 .project-container {
   position: relative;
 }
+
 .project-icon {
   position: absolute;
   font-size: 1.75rem;
@@ -973,14 +1164,17 @@ Products Page
   color: var(--clr-primary-1);
   border: 0.375rem solid var(--clr-grey-10);
 }
+
 .project-details {
   padding: 2rem 1.5rem;
 }
+
 .project-footer {
   display: grid;
   grid-template-columns: 1fr 1fr;
   color: var(--clr-primary-5);
 }
+
 .project-footer a {
   color: var(--clr-primary-5);
   text-transform: capitalize;
@@ -988,9 +1182,11 @@ Products Page
   transition: var(--transition);
   justify-self: end;
 }
+
 .project-footer a:hover {
   color: var(--clr-primary-1);
 }
+
 .projects-page-center {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(330px, 1fr));
