--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -275,7 +275,6 @@ p {
   }
 }
 
-/* fixed navbar */
 .navbar-fixed {
   position: fixed;
   top: 0;
@@ -297,17 +296,14 @@ p {
   background: var(--clr-grey-10);
   z-index: 4;
   display: grid;
-  /* align-items: center;
-  justify-content: center; */
   place-items: center;
   -webkit-transition: var(--transition);
   transition: var(--transition);
-  /* add later */
+
   -webkit-transform: translateX(-100%);
   transform: translateX(-100%);
 }
 
-/* toggle sidebar */
 .show-sidebar {
   -webkit-transform: translateX(0);
   transform: translateX(0);
@@ -683,7 +679,6 @@ p {
   width: 100%;
   height: 100%;
   background: var(--clr-white);
-  /* background: rgba(0, 0, 0, 0.6); */
   opacity: 0.7;
   z-index: -1;
 }
@@ -984,7 +979,7 @@ p {
   border-radius: 50%;
   -o-object-fit: cover;
   object-fit: center;
-} */
+} 
 
 .team-card-body{
   background-color: black;
