--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -991,14 +991,19 @@ p {
 
 
 .footer {
-  padding-bottom: 2rem;
+  padding: 2rem 0;
   background: #222;
-  display: grid;
-  place-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* place-items: center; */
+}
+.courtesy{
+  display: flex;
 }
 
 .footer .social-icons {
-  margin-bottom: 2rem;
+  /* margin-bottom: 2rem; */
 }
 
 .footer .social-icon {
