--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -376,7 +376,7 @@ p {
 }
 
 .hero {
-  background: linear-gradient(rgb(44, 174, 186, 0.7), rgba(0, 0, 0, 0.7)),
+  background: linear-gradient(rgba(39, 32, 158, 0.7), rgba(0, 0, 0, 0.7)),
     url("https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg") center/cover no-repeat;
 }
 
