--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -249,12 +249,19 @@ p {
 
   .nav-links {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(5, 1fr);
     justify-items: center;
     -webkit-column-gap: 2rem;
     -moz-column-gap: 2rem;
-    column-gap: 2rem;
+    column-gap: 1.5rem;
     justify-self: end;
+  }
+
+  .nav-links li {
+    display: flex;
+    color: white;
+    gap: .5rem;
+    align-items: center;
   }
 
   .nav-links a {
@@ -276,10 +283,34 @@ p {
     -webkit-box-align: center;
     align-items: center;
   }
+
+  .drop-downs {
+    /* background: green; */
+    background: var(--clr-primary-2);
+    z-index: 4;
+    transition: var(--transition);
+    max-width: 15rem;
+
+    /* padding: 1rem; */
+    overflow: hidden;
+    color: white;
+    position: absolute;
+    top: 5rem;
+    margin-top: .2rem;
+  }
+
+  .drop-down {
+    margin-top: 1rem;
+    cursor: pointer;
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
+
 }
 
 .navbar-fixed {
   position: fixed;
+
   top: 0;
   left: 0;
   width: 100%;
@@ -818,6 +849,7 @@ p {
 .timeline-center {
   width: 80vw;
   max-width: 40rem;
+  margin: 0 auto;
 }
 
 .timeline-item {
@@ -869,7 +901,7 @@ p {
   border-radius: 50%;
   display: grid;
   place-items: center;
-  color: var(--clr-primary-1);
+  color: white;
   font-weight: bold;
 }
 
@@ -1290,4 +1322,167 @@ p {
 .footer-coutersy p {
   text-align: center;
   color: grey;
+}
+
+
+/* 
+============
+CONTACT
+============
+*/
+
+
+
+.contact-form-container {
+  /* background: red; */
+  box-shadow: var(--dark-shadow);
+  padding: 5rem;
+}
+
+
+.contact-form-container form,
+.contact-form-container .input-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+.contact-form-container form {
+  gap: 1rem;
+}
+
+.contact-form-container label {
+  text-transform: capitalize;
+}
+
+.contact-form-container input,
+.contact-form-container textarea {
+  border: 2px solid #222;
+  padding: 0.3rem;
+}
+
+.contact-details-container {
+  padding: 5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.social-media {
+  display: flex;
+  font-size: 2rem;
+  gap: 1rem;
+}
+
+.phone-number,
+.address {
+  font-size: 1rem;
+  max-width: 20rem;
+}
+
+@media screen and (min-width: 992px) {
+  .contact-section {
+    display: flex;
+    /* background: red; */
+  }
+
+  .contact-form-container,
+  .contact-details-container {
+    flex: 1;
+  }
+
+}
+
+/* 
+===========
+Admission
+===========
+*/
+.admission-card {
+  /* background: blue; */
+  border: 2px dotted black;
+  border-radius: 2rem;
+  padding: 3rem;
+  width: 30rem;
+  /* margin-top: 1rem; */
+}
+
+.one,
+.three {
+  border-right: 0;
+  border-bottom: 0;
+  border-top-right-radius: 0;
+  margin-right: 2rem;
+  padding-left: 1rem;
+  background: blue;
+}
+
+.two,
+.four {
+  border-left: 0;
+  border-bottom: 0;
+  margin-left: 2rem;
+  padding: 0;
+  background: yellow;
+  /* border-top: 0; */
+  border-top-left-radius: 0;
+}
+
+/* 
+==========
+Schedule
+==========
+ */
+
+.calendar-container {
+  display: flex;
+  flex-direction: column;
+  max-width: 22rem;
+  gap: 2rem;
+  /* background: yellow; */
+  /* justify-self: center; */
+  margin: auto;
+  margin-top: 4rem;
+}
+
+.schedule-container {
+  display: flex;
+  flex-direction: column;
+  margin-top: 5rem;
+  padding: 5rem;
+  padding-top: 0;
+  gap: 2rem;
+  /* justify-items: center; */
+  /* align-items: center; */
+  /* background: red; */
+}
+
+.admission-title {
+  width: 80vw;
+  margin: auto;
+
+}
+
+.admission-title p,
+.admission-title h4 {
+  text-align: center;
+  max-width: 50rem;
+  margin: 1rem auto;
+}
+
+.admission-title h3 {
+  text-align: center;
+  margin: 1rem auto;
+}
+
+.button-wrapper {
+  margin: auto;
+  margin-top: 1rem;
+  max-width: 20rem;
+  display: flex;
+}
+
+.admission-title h4 {
+  margin-top: 3rem;
+  margin-bottom: 0;
+  line-height: 2rem;
 }
